--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,7 @@
     <string name="mainPageLastAdded"><b>Son Eklenen Etkinlikler</b></string>
     <string name="noCategorizedEvent">Üzgünüz. Seçtiğiniz kategoride bir etkinlik bulunamadı. Eğer bu kategoride bir etkinlik oluşturmak isterseniz Dudula sekmesinden ekleyebilirsiniz.</string>
 
+    <!-- General -->
+    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
 
 </resources>
